--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.2.10
 certifi==2020.6.20
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.1.2
+django-heroku==0.3.1
 django-location-field==2.1.0
 gis==0.2.1
 gunicorn==20.0.4
 idna==2.10
+mysqlclient==2.0.1
 Pillow==8.0.1
 psycopg2==2.8.6
 pytz==2020.1
